docs/1.17.1/m1.md
# Forge Dev Environment on Apple Silicon 

**This is only relevant if you have a computer with an Apple Silicon chip (MacOS & arm architecture). Before trying to follow this, do the normal [Environment Setup](environment-setup).**

These instructions are for Forge 1.17.x (for other versions see [1.16](/o16/m1) or [1.18](/o18/m1)).  

First make sure you are using a [MacOS JDK compiled natively for ARM chips](https://www.azul.com/downloads/?os=macos&architecture=arm-64-bit&package=jdk).  

> Note: if you use an x86 JDK, it should run fine with out this error but it will be much slower beacuse Rosetta 2's emulation is cool but not magic. From my non-scientfic test, the time to start the game went from just over a minuite to 19 seconds.


## First Error

When you run minecraft from dev environment using a native ARM JDK, you will get this error:

    [LWJGL] Platform/architecture mismatch detected for module: org.lwjgl
      JVM platform:
        macOS aarch64 17.0.1
        OpenJDK 64-Bit Server VM v17.0.1+12-39 by Oracle Corporation
      Platform available on classpath:
        macos/x64
    --- 
    Exception in thread "Render thread" java.lang.RuntimeException: java.lang.reflect.InvocationTargetException
    ---
    Caused by: java.lang.reflect.InvocationTargetException
    ---
    Caused by: java.lang.NoClassDefFoundError: Could not initialize class com.mojang.blaze3d.systems.RenderSystem

### How To Fix

Add the following line to the bottom of your build.gradle  
`apply from: "https://moddingtutorials.org/applesilicon.gradle"`

You must have a `gradle.properties` file (goes in the same directory as your build.gradle).
It must have the line `mc_version=1.17.1` (obviously it can have whatever other settings you need as well)

**Note:** the first time you run it, you'll crash with the same error. this is fine! just run it again and it will work :)

## Second Error

Once you've fixed the above, older versions of MC (anything before 1.18) will throw a different error 

```
    [Render thread/WARN]: Failed to create window: 
    com.mojang.blaze3d.platform.Window$WindowInitFailed: GLFW error 65548: Cocoa: Regular windows do not have icons on macOS
```

### How To Fix

Add this mixin. It goes in the `client` section of your `mixins.json`. If you don't know how to add mixins, read [the mixins tutorial](mixins). 

    @Mixin(Window.class)
    public class M1Fix {
        @Inject(at = @At("HEAD"), method = "setIcon", cancellable = true)
        private void glfwSetWindowIcon(InputStream intbuffer1, InputStream intbuffer2, CallbackInfo ci) {
            if (isAppleSlilicon()) ci.cancel();
        }

        @Inject(at = @At("HEAD"), method = "checkGlfwError", cancellable = true)
        private static void checkGlfwError(BiConsumer<Integer, String> j, CallbackInfo ci) {
            if (isAppleSlilicon()) ci.cancel();
        }
    
        private static boolean isAppleSlilicon() {
            return System.getProperty("os.arch").equals("aarch64") && System.getProperty("os.name").equals("Mac OS X");
        }
    }

Note: I'm using the offical mappings, the mcp/yarn ones might call setIcon and checkGlfwError something different.

## How It Works

### Wrong lwjgl Version

So the forge gradle plugin gets meta data about all the mc versions from `DownloadMCMeta#MANIFEST_URL = "https://launchermeta.mojang.com/mc/game/version_manifest.json"`

This has a list of all the versions: 


    {
          "id": "1.18.1",
          "type": "release",
          "url": "https://launchermeta.mojang.com/v1/packages/b0bdc637e4c4cbf0501500cbaad5a757b04848ed/1.18.1.json",
          "time": "2021-12-10T08:26:34+00:00",
          "releaseTime": "2021-12-10T08:23:00+00:00"
    },


  It fetches the json file from the url given for your version. 
  This is saved in `build/downloadMCMeta/version.json`. 
  It has a list of `libraries` that looks like: 
  
    {
          "downloads": {
            "artifact": {
              "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1.jar",
              "sha1": "7a0c583fcbec32b15784f846df536e1837d83666",
              "size": 38616,
              "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1.jar"
            },
            "classifiers": {
              "natives-linux": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-linux.jar",
                "sha1": "5536616b558cea2fea6330ca682fd7c733db9c43",
                "size": 156057,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-linux.jar"
              },
              "natives-macos": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-macos.jar",
                "sha1": "439ab9d0264167a949cc7bcce673704322baaf50",
                "size": 117001,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-macos.jar"
              },
              "natives-windows": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-windows.jar",
                "sha1": "3c869b3d7638c800b7039cd859d064658643ad6e",
                "size": 218136,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-windows.jar"
              }
            }
          },
          "name": "org.lwjgl:lwjgl-jemalloc:3.2.1",
        },

lwjgl is split into separate versions by operating system: natives-macos, natives-windows, and natives-linux
Forge checks your operating system and chooses the right classifier.
It uses this classifier to generate a pom file that has all your dependencies. 
The normal gradle/maven stuff is later used to fetch these dependencies (not the urls in the version.json). 

By default Minecraft wants a version of LWJGL that does not distribute a version compiled for m1 processors. 

We can use `configurations.all { resolutionStrategy { force` in our build.gradle to make it use a more recent version
However, it is still hardcoded to use the classifier for the x64 version (`natives-macos`), we must tell it to use the m1 version (`natives-macos-arm64`).  

This should be fixed in ForgeGradle but I did a hacky thing that works.  

Once it generates the pom file that describes the dependencies it wants, its cached at `~/.gradle/caches/forge_gradle/mcp_repo/net/minecraft/client/VERSION/client-VERSION.pom`. 
If it already exists ForgeGradle will not regenerate it and just get those libraries for you. 
We can edit it so that every part of lwjgl it gets will set the classifier to the m1 version. 
We read the pom file, replace all instances of "natives-macos" with "natives-macos-arm64" and rewrite the pom file. 

Now when we run MC it works!

When we use `apply from` to add this code to the build.gradle, it runs before the downloadMCMeta task. 
So the first time it runs, our code won't find the pom file and so does nothing, then ForgeGradle will generate the pom file and mc will crash because it gets the wrong version. 
The next time it runs, our code will fix the pom file to use the m1 version, the ForgeGradle will skip generating the pom because it thinks its still cached from last time, then mc will run normally. 

### Windows Do Not Have Icons

old minecraft code does not expect to be using the newer version of lwjgl. at some point apple removed an api that it tries to use.  new minecraft just doesnt try to use that api.

Minecraft wants to call `GLFW.glfwSetWindowIcon(this.window, buffer);` from `Window#setIcon` (called from the constructor of `Minecraft`). 

The comment on `glfwSetWindowIcon` says `macOS: Regular windows do not have icons on macOS. This function will emit FEATURE_UNAVAILABLE.`. 
So when that's called it crashes with an illigal state exception. 

I mixin to `Window` and inject at the HEAD of two methods (`checkGlfwError` and `setIcon`).
These mixins will run before the real body of the methods. They just cancel the method call if running on an Apple Silicon computer.

then just add that to your mixins.json in the `client` section.

It seems like you dont need the mixin for `checkGlfwError` on 1.17 (only on 1.16) but i keep it there just to be safe / consistent. 